<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    tools:context=".ui.pharmacy.pharmacy_form.PharmacyFormActivity">

    <TextView
        style="@style/TextViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ma_thuoc" />

    <EditText
        android:id="@+id/edMaThuoc"
        style="@style/InputField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nhap_ma_thuoc"
        android:inputType="text"
        android:maxLines="1" />

    <TextView
        style="@style/TextViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ten_thuoc" />

    <EditText
        android:id="@+id/edTenThuoc"
        style="@style/InputField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nhap_ten_thuoc"
        android:inputType="text"
        android:maxLines="1" />

    <TextView
        style="@style/TextViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dvt" />

    <com.team28.qlnhathuoc.utils.AutoCompleteEditText
        android:id="@+id/edDVT"
        style="@style/InputField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nhap_dvt"
        android:maxLines="1" />

    <TextView
        style="@style/TextViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_gia" />

    <EditText
        android:id="@+id/edDonGia"
        style="@style/InputField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nhap_don_gia"
        android:inputType="numberDecimal"
        android:maxLines="1" />

    <TextView
        style="@style/TextViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/icon" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edPathIcon"
            style="@style/InputField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/chon_icon"
            android:maxLines="5"
            android:paddingEnd="40dp" />

        <ImageView
            android:id="@+id/btnLoadImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="12dp"
            android:src="@drawable/ic_download_image" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <ImageView
            android:id="@+id/imgIconPreview"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="8dp"
            android:src="@drawable/medicine" />


        <ImageButton
            android:id="@+id/btnChooseIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="12dp"
            android:src="@drawable/ic_choose_image" />

        <ImageButton
            android:id="@+id/btnTakePhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/btnChooseIcon"
            android:src="@drawable/ic_take_photo" />

        <ImageView
            android:id="@+id/btnClearImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_clear" />
    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSubmit"
        style="@style/ActiveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/them" />


</LinearLayout>