<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="280dp"
    android:orientation="vertical"
    android:background="@drawable/bg_dialog"
    android:paddingHorizontal="12dp"
    android:paddingVertical="18dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/bill_created"
        android:textColor="@color/purple_500"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/send_bill"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edEmail"
        style="@style/InputField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:hint="@string/nhap_email" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDialogCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:text="@string/quay_ve" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDialogOK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_view_bill"
            android:text="@string/gui"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>