<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.bill.bill_create.bill_preview.BillPreviewConfirmFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingVertical="8dp"
        android:text="@string/ct_hoa_don"
        android:textAllCaps="true"
        android:textColor="@color/purple_500"
        android:textSize="@dimen/big_text_size"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/textView"
        android:layout_marginBottom="120dp"
        tools:listitem="@layout/item_bill_detail_preview" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:paddingHorizontal="8dp"
            android:paddingTop="4dp">

            <RelativeLayout
                android:id="@+id/relaNT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/nha_thuoc"
                    android:textColor="@color/black"
                    android:textSize="@dimen/small_text_size"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinnerNT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:spinnerMode="dialog" />
            </RelativeLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/relaNT"
                android:text="@string/tong"
                android:textColor="@color/black"
                android:textSize="@dimen/small_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTotalMoney"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/relaNT"
                android:layout_alignParentEnd="true"
                android:text="450,000 đ"
                android:textColor="@color/black"
                android:textSize="@dimen/small_text_size"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnConfirmBill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvTotalMoney"
                android:layout_marginVertical="8dp"
                android:background="@drawable/bg_button_view_bill"
                android:text="@string/lap_hoa_don"
                android:textColor="@color/white" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>


</RelativeLayout>