<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="4dp"
    android:clickable="true"
    android:elevation="4dp"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackgroundBorderless"
    app:cardCornerRadius="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="12dp"
        android:paddingVertical="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/bill" />

            <TextView
                android:id="@+id/tvSoHD"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:minWidth="70dp"
                android:text="A010"
                android:textColor="@color/black"
                android:textSize="@dimen/small_text_size"
                android:textStyle="bold|italic" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="12dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:text="@string/lap_tai"
                    android:textColor="@color/text_secondary"
                    android:textSize="@dimen/small_text_size" />

                <TextView
                    android:id="@+id/tvTenNT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:ellipsize="end"
                    android:text="Nhà thuốc Quang Vinh"
                    android:textColor="@color/black"
                    android:textSize="@dimen/small_text_size"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:text="@string/thanh_toan"
                    android:textColor="@color/text_secondary"
                    android:textSize="@dimen/small_text_size" />

                <TextView
                    android:id="@+id/tvTotalMoney"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="25.000đ"
                    android:textColor="@color/text_secondary"
                    android:textSize="@dimen/small_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:text="@string/thoi_gian"
                    android:textColor="@color/text_secondary"
                    android:textSize="@dimen/small_text_size" />

                <TextView
                    android:id="@+id/tvNgayHD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="8dp"
                    android:text="15/03/2022 - 08:30"
                    android:textColor="@color/text_secondary"
                    android:textSize="@dimen/small_text_size"
                    android:textStyle="italic" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
